route anh bien mang trong node js

--- a/views/tin-tuc.ejs
+++ b/views/tin-tuc.ejs
@@ -15,18 +15,7 @@
     <p>Welcome to
         <%= title %>
     </p>
-
-    <%= 6*4 %>
-
-        <%
-		var khoahoc = ["php", "html", "javascript", 'js'];
-		khoahoc.forEach(function(val) {
-	%>
-
-    <% 
-		val;
-	%>
-    <% }); %>
+    <p> Hien thi noi dung o day <%= noidung %></p>
 </body>
 
 </html>
